Refactor: 필터, 좋아요, 카드 컴포넌트, 모달 컴포넌트 기능 구현 완료 - 백엔드 사이드와 데이터 구조 및 key 값 소통 완료 - Pagination 등 기능 구현 완료

--- a/src/Pages/HomeDetails/Component/slickSlider.scss
+++ b/src/Pages/HomeDetails/Component/slickSlider.scss
@@ -3,16 +3,16 @@
 }
 
 .slick-prev::before, .slick-next::before{
-  font-size: 40px;
-  color: gray;
+  font-size: 35px;
+  color: white;
 }
 
 .slick-prev::before {
   position: relative;
-  right: 40px;
+  left: 35px;
 }
 
 .slick-next::before {
   position: relative;
-  left: 40px;
+  left: -50px;
 }
