Modify: 불필요한 코드 정리 및 인원설정 동기화 기능 추가

--- a/src/Components/Search/Calendar/Calendar.scss
+++ b/src/Components/Search/Calendar/Calendar.scss
@@ -36,7 +36,7 @@
       border-radius: 30px;
   
       .DayPicker {
-        width: 100%;
+        width: 100% !important;
         margin: 0 !important;
         padding: 33px 0 10px;
         border-radius: 30px;
