conflict resolved stash

--- a/src/Components/Search/Calendar/Calendar.scss
+++ b/src/Components/Search/Calendar/Calendar.scss
@@ -1,53 +1,54 @@
-.SM {
-  @mixin flexSet($arg...) {
-    display: flex;
-    justify-content: #{nth($arg, 1)};
-    align-items: #{nth($arg, 2)};
-    @if length($arg) == 3 {
-      flex-direction: #{nth($arg, 3)};
-    }
+@mixin flexSet($arg...) {
+  display: flex;
+  justify-content: #{nth($arg, 1)};
+  align-items: #{nth($arg, 2)};
+  @if length($arg) == 3 {
+    flex-direction: #{nth($arg, 3)};
   }
-  
-  $primary-color: #fe5131;
-  $default-color: rgb(247, 247, 247);
-  
+}
+
+$primary-color: #fe5131;
+$default-color: rgb(247, 247, 247);
+
+.sc-ljRboo {
   .DateRangePickerInput {
     @include flexSet(space-between, null);
     width: 100%;
     padding: 0;
     background-color: transparent;
+    border: none;
     z-index: inherit;
-  
+
     &_arrow,
     .DateInput {
       display: none;
     }
   }
-  
+
   .DateRangePicker {
     z-index: 400;
-  
+
     .DateRangePickerInput button {
       display: none;
     }
-  
+
     &_picker {
       width: 458px;
       border-radius: 30px;
-  
+
       .DayPicker {
         width: 100% !important;
         margin: 0 !important;
         padding: 33px 0 10px;
         border-radius: 30px;
-  
+
         > div {
           > div {
             margin: 0 auto;
-  
+
             .CalendarMonthGrid {
               display: flex;
-  
+
               .CalendarMonth_caption {
                 padding-top: 8px;
                 padding-bottom: 49px;
@@ -57,28 +58,27 @@
             }
           }
         }
-  
+
         .DayPickerNavigation {
           @include flexSet(space-between, null);
-  
+
           &_button {
             @include flexSet(center, center);
             width: 32px;
             height: 32px;
           }
         }
-  
+
         &_weekHeader {
           top: 50px;
         }
-  
+
         .CalendarDay {
           border: none;
           line-height: 42px;
           font-size: 14px;
           font-weight: 600;
           z-index: inherit;
-  
           &__default {
             &:hover {
               background: $primary-color;
@@ -86,13 +86,11 @@
               border-radius: 50%;
             }
           }
-  
           &__selected {
             &:hover {
               background: $primary-color;
               border-radius: 50%;
             }
-  
             &_start,
             &_end {
               background: $primary-color;
@@ -101,7 +99,6 @@
             &_span {
               background: $default-color;
               color: black;
-  
               &:hover {
                 background: $primary-color;
                 color: $default-color;
@@ -113,7 +110,6 @@
             &_span {
               background: $default-color;
               color: black;
-  
               &:hover {
                 background: $primary-color;
                 color: $default-color;
@@ -123,7 +119,6 @@
           }
           &__blocked_out_of_range {
             text-decoration: line-through;
-  
             &:hover {
               background: #fff;
               color: #cacccd;
@@ -134,5 +129,3 @@
     }
   }
 }
-
-
