fix: for final presentation

--- a/src/Components/Search/Calendar/Calendar.scss
+++ b/src/Components/Search/Calendar/Calendar.scss
@@ -10,7 +10,7 @@
 $primary-color: #fe5131;
 $default-color: rgb(247, 247, 247);
 
-.sc-ljRboo {
+.sc-dwcuIR {
   .DateRangePickerInput {
     @include flexSet(space-between, null);
     width: 100%;
